[tool.poetry]
name = "logo-cutouts"
version = "0.1.0"
description = ""
authors = ["Martin Mokry <martin-kokos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"
matplotlib = "^3.7.2"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
